# mkdocs-ansible-collection

./: .gitignore  .readthedocs.yaml  .yamllint.yaml  README.md  ansible.cfg  mkdocs.yaml  mkdocs.yml  pyproject.toml  run.sh
.github/workflows/: ci.yaml  release.yaml
docs/: extra.css  release_notes.md  requirements.txt  requirements.yaml  user_guide.md
docs/dev/: index.md
docs/showcase/: index.md
docs/user/: index.md
mkdocs_ansible_collection/: __init__.py  plugin.py
mkdocs_ansible_collection/templates/: plugin.md.jinja  plugin_list.md.jinja
