[project]
name = "mkdocs-ansible-collection"
version = "0.2.1"
description = "MkDocs Plugin that automatically generates pages for Ansible Collections."
authors = [
    { name = "Cristian Sirbu", email = "cristian@trueneutral.eu" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["mkdocs", "ansible"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing",
]
requires-python = ">=3.9"
dependencies = [
    "mkdocs (>=1.6.0,<2.0.0)",
    "ansible-core (>=2.15,<3.0)"
]

[project.urls]
homepage = "https://mkdocs-ansible-collection.readthedocs.io/en/latest/"
repository = "https://github.com/cmsirbu/mkdocs-ansible-collection"
documentation = "https://mkdocs-ansible-collection.readthedocs.io/en/latest/"

# Poetry Section
[tool.poetry]
packages = [{ include = "mkdocs_ansible_collection" }]

[tool.poetry.plugins."mkdocs.plugins"]
ansible-collection = "mkdocs_ansible_collection.plugin:AnsibleDocsPlugin"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
yamllint = "^1.35.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.30"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
# Poetry Section

# UV Section
[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "yamllint>=1.35.1",
]
docs = [
    "mkdocs-material>=9.5.50",
]

[tool.uv]
default-groups = ["dev", "docs"]
# UV Section

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F",  # pyflakes
    "E",  # pyflakes
    "W",  # pyflakes
    "PL", # pylint
    "I",  # isort
    "UP", # pyupgrade
    "PL", # pylint
]
ignore = [
    "D212", # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.pydocstyle]
convention = "google"
